--- a/index.html
+++ b/index.html
@@ -183,12 +183,7 @@
 <script>
   var fireballSize = 22;
   var getFireballSpeed = function (left) {
-    if (left) {
-      return getFireballSpeed = 5;
-    }
-    else {
-      return getFireballSpeed = 2;
-    }
+    return left ? 5 : 2;
   }
   var wizardSpeed = 3;
   var wizardWidth = 70;
